--- a/site/public/css/app.css
+++ b/site/public/css/app.css
@@ -7,6 +7,11 @@ html, body {
     margin: 0;
 }
 
+.ensemble{
+    display: flex;
+    flex-direction: row;   
+}
+
 .full-height {
     height: 100vh;
 }
@@ -22,9 +27,10 @@ html, body {
 }
 
 .top-right {
-    position: absolute;
-    right: 10px;
-    top: 18px;
+    display: flex;
+    flex-direction: row;   
+    justify-content: flex-start; 
+    align-items:center;
 }
 
 .content {
