--- a/site/public/css/app.css
+++ b/site/public/css/app.css
@@ -56,10 +56,21 @@ html, body {
 }
 
 .background{
-    height: 90vh;
+    height: 100vh;
     background-color: black;
     display: flex;
-    flex-direction: column;   
-    justify-content: center; 
+    flex-direction: row;   
+    justify-content: start; 
+    align-items:center;
+}
+
+.background2{
+    height: 100vh;
+    background: url("/images/skateur.jpg");
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
+    display: flex;
+    flex-direction: row;   
+    justify-content: end; 
     align-items:center;
 }
