--- a/site/public/css/app.css
+++ b/site/public/css/app.css
@@ -61,11 +61,12 @@ html, body {
 
 .background{
     height: 100vh;
-    background:url("./images/Skate_arthur.png");
+    background: url("/images/Skate_arthur.png");
     display: flex;
     flex-direction: row;   
     justify-content: start; 
     align-items:center;
+    color: black;
 }
 
 
@@ -74,4 +75,13 @@ html, body {
     flex-direction: column;   
     justify-content: start; 
     align-items:center;
+}
+
+a {
+    color: #FF0000;
+    font-size: 18px; 
+}
+
+p{
+    font-size: 18px;
 }
