--- a/site/public/css/app.css
+++ b/site/public/css/app.css
@@ -85,3 +85,19 @@ a {
 p{
     font-size: 18px;
 }
+
+.Info{
+    margin-top:5%;
+    display: flex;
+    flex-direction: column;   
+    justify-content: center; 
+    align-items:center;
+}
+
+.articles{
+    width: 99vW;
+    display: flex;
+    flex-direction: row;   
+    justify-content: space-around; 
+    align-items:center;
+}
