--- a/site/public/css/app.css
+++ b/site/public/css/app.css
@@ -83,7 +83,8 @@ a {
 }
 
 p{
-    font-size: 18px;
+    font-size: 20px;
+    text-align: center;
 }
 
 .Info{
@@ -99,5 +100,23 @@ p{
     display: flex;
     flex-direction: row;   
     justify-content: space-around; 
+    align-items:center;
+
+}
+
+.articles2{
+    width: 99vW;
+    display: flex;
+    flex-direction: row;   
+    justify-content: space-around; 
+    align-items:center;
+    background-color:rgb(182, 182, 182);
+}
+
+.textearticles{
+    width: 95vW;
+    display: flex;
+    flex-direction: column;   
+    justify-content: space-evenly; 
     align-items:center;
 }
