--- a/site/public/css/app.css
+++ b/site/public/css/app.css
@@ -120,3 +120,10 @@ p{
     justify-content: space-evenly; 
     align-items:center;
 }
+
+.toutmap{
+    display: flex;
+    flex-direction: column;   
+    justify-content: center; 
+    align-items:center;
+}
